website/versioned_docs/version-0.9.6/policy/releases.mdx
---
title: Profile Releases
sidebar_position: 4
hide_title: true
---
import TierLabel from "../_components/TierLabel";

# Profile Releases <TierLabel tiers="enterprise" />

## v0.6.3

### Highlights
- **Agent**
  - Reference flux objects in violations events instead of the original resource object

### Dependency Versions

- policy-agent 1.2.1

### Policy Library Compatibility

- v0.4.0
- v1.0.0
- v1.1.0

## v0.6.2

### Highlights
- **Agent**
  - Add Terraform mode to allow validating terraform plans
  - Support targeting kubernetes HPA resources

### Dependency Versions

- policy-agent 1.2.0

### Policy Library Compatibility

- v0.4.0
- v1.0.0
- v1.1.0

While both v.0.4.0 and v1.0.0 are compatible with the agent. Only v1.1.0 includes the modificaiton needed to make Controller Minimum Replica Count policy with with `horizontalpodautoscalers`

## v0.6.1

### Highlights
- **Agent**
  - Make the audit interval configurable through `config.audit.interval`. It defaults to 24 hours.
  - Add support for targeting certain flux resources (kustomizations, helmreleases and ocirepositories) in the admission mode.
- **Profile**
  - Add the ability to use an existing GitSource instead of creating a new one.


### Dependency Versions

- policy-agent 1.1.0

### Policy Library Compatibility

- v0.4.0
- v1.0.0

## v0.6.0

### Highlights
- **Agent**
  - Configure the agent through a configuration file instead of arguments.
  - Allow defining different validation sinks for audit and admission modes.
  - Add the PolicySet CRD to the hem chart.
- **Profile**
  - Disable the default policy source.

### Dependency Versions

- policy-agent 1.0.0

### Policy Library Compatibility

- v0.4.0
- v1.0.0
